# tesseract

./: Makefile.am  a00002.html  a00002_source.html  a00005.html  a00005_source.html  a00008.html  a00008_source.html  a00011.html  a00011_source.html  a00014.html  a00014_source.html  a00017.html  a00017_source.html  a00020.html  a00020_source.html  a00023.html  a00023_source.html  a00026.html  a00026_source.html  a00029.html  a00029_source.html  a00032.html  a00032_source.html  a00035.html  a00035_source.html  a00038.html  a00038_source.html  a00041.html  a00041_source.html  a00044.html  a00044_source.html  a00050.html  a00050_source.html  a00053.html  a00053_source.html  a00056.html  a00056_source.html  a00059.html  a00059_source.html  a00062.html  (+2826 more)
api/: baseapi.h  renderer.cpp  tesseractmain.cpp
arch/: simddetect.cpp
ccmain/: osdetect.cpp  resultiterator.cpp  tesseractclass.cpp  tesseractclass.h
ccstruct/: imagedata.cpp  seam.cpp  seam.h
ccutil/: errcode.h  host.h  mainblk.cpp  tprintf.h  version.h
cutil/: callcpp.h
dict/: dawg.h  trie.cpp
java/: Makefile.am  Manifest.txt
lstm/: recodebeam.cpp
nsis/: Makefile.am  tesseract.nsi
training/: Makefile.am  language-specific.sh
viewer/: scrollview.h
vs2010/: tesseract.nsi
